--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/IRFANIDHAM/irfan#readme",
   "dependencies": {
-    "mongodb": "^6.15.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.17.0"
   }
 }
